--- a/app/package.json
+++ b/app/package.json
@@ -1,16 +1,17 @@
 {
   "dependencies": {
     "express": "^4.21.2",
-    "mongoose": "^8.13.1"
-  },
-  "scripts": {
-    "start": "nodemon server.js"
-  },
-  "devDependencies": {
+    "mongoose": "^8.13.1",
     "dotenv": "^16.4.7",
     "kafkajs": "^2.2.4",
     "mongodb": "^6.15.0",
-    "morgan": "^1.10.0",
+    "morgan": "^1.10.0"
+  },
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.9"
   }
 }
