fix the CI pipeline

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -130,8 +130,8 @@ jobs:
               restart: unless-stopped
           
           volumes:
-            mongo-data:
             zookeeper-data:
+            zookeeper-log:
             kafka-data:
           EOL
           
