--- a/.github/workflows/log-service-ci-cd.yml
+++ b/.github/workflows/log-service-ci-cd.yml
@@ -47,7 +47,6 @@ jobs:
         username: ec2-user
         key: ${{ secrets.EC2_SSH_KEY }}
         script: |
-          
           # Stop and remove existing containers
           docker-compose down || true
           
@@ -63,12 +62,6 @@ jobs:
               environment:
                 MONGO_INITDB_ROOT_USERNAME: admin
                 MONGO_INITDB_ROOT_PASSWORD: password
-              deploy:
-                resources:
-                  limits:
-                    memory: 200M
-                    cpus: '0.3'
-              command: ["mongod", "--wiredTigerCacheSizeGB", "0.1"]
               volumes:
                 - mongo-data:/data/db
           
@@ -78,17 +71,11 @@ jobs:
               environment:
                 ZOOKEEPER_CLIENT_PORT: 2181
                 ZOOKEEPER_TICK_TIME: 2000
-                ZOOKEEPER_HEAP_OPTS: "-Xmx100m -Xms100m"
               ports:
                 - '2181:2181'
               volumes:
                 - zookeeper-data:/var/lib/zookeeper/data
                 - zookeeper-log:/var/lib/zookeeper/log
-              deploy:
-                resources:
-                  limits:
-                    memory: 150M
-                    cpus: '0.2'
               restart: unless-stopped
               healthcheck:
                 test: echo stat | nc localhost 2181 || exit 1
@@ -113,18 +100,10 @@ jobs:
                 KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
                 KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
                 KAFKA_AUTO_CREATE_TOPICS_ENABLE: 'true'
-                KAFKA_HEAP_OPTS: "-Xmx200m -Xms200m"
-                KAFKA_LOG_RETENTION_HOURS: 24
-                KAFKA_LOG_SEGMENT_BYTES: 104857600
-                KAFKA_LOG_RETENTION_CHECK_INTERVAL_MS: 300000
+                KAFKA_HEAP_OPTS: "-Xmx512M -Xms512M"
               restart: unless-stopped
               volumes:
                 - kafka-data:/var/lib/kafka/data
-              deploy:
-                resources:
-                  limits:
-                    memory: 250M
-                    cpus: '0.3'
               healthcheck:
                 test: kafka-topics --bootstrap-server kafka:9092 --list || exit 1
                 interval: 5s
@@ -138,34 +117,20 @@ jobs:
               ports:
                 - '80:3000'
               depends_on:
-                kafka:
-                  condition: service_healthy
+                - kafka
+                - mongo
               environment:
                 PORT: 3000
-                DATABASE_URL: mongodb://admin:password@mongo:27017
+                DATABASE_URL: mongodb://<db_username>:<db_password>@mongo:27017
                 DATABASE_USERNAME: admin
                 DATABASE_PASSWORD: password
-                NODE_OPTIONS: "--max-old-space-size=150"
-              deploy:
-                resources:
-                  limits:
-                    memory: 200M
-                    cpus: '0.2'
               restart: unless-stopped
 
             kafka_producer:
               image: ${{ secrets.DOCKERHUB_USERNAME }}/kafka-producer:latest
               container_name: kafka_producer
               depends_on:
-                app:
-                  condition: service_started
-              environment:
-                NODE_OPTIONS: "--max-old-space-size=100"
-              deploy:
-                resources:
-                  limits:
-                    memory: 100M
-                    cpus: '0.1'
+                - app
               restart: unless-stopped
           
           volumes:
@@ -175,11 +140,8 @@ jobs:
             mongo-data:
           EOL
           
-          # Clean up unused Docker resources
-          docker system prune -af
-          
           # Start the containers
-          docker-compose up -d
+           docker-compose up -d
           
           # Set up monitoring to restart if memory gets too high
           cat > monitor.sh << 'EOL'
